Overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,8 @@ clear: both;
 zoom: 1;
 margin-bottom: 20px;
 border-bottom: solid 1px #d6d6d6;
+width: 610px;
+overflow: hidden;
 }
 section article .news:after {
 content: '';
